--- a/manifests/apps/golang-gitwebhook-service/base/deploy.yaml
+++ b/manifests/apps/golang-gitwebhook-service/base/deploy.yaml
@@ -1,6 +1,8 @@
-kind: DeploymentConfig
-apiVersion: apps.openshift.io/v1
+kind: Deployment
+apiVersion: apps/v1
 metadata:
+  annotations:
+    deployment.kubernetes.io/revision: "1"
   namespace: golang-cicd
   labels:
     app: golang-gitwebhook-interface
