--- a/environments/overlays/cicd/kustomization.yaml
+++ b/environments/overlays/cicd/kustomization.yaml
@@ -3,10 +3,10 @@ kind: Kustomization
 bases:
   - ../../../manifests/tekton/rbac/base/
   - ../../../manifests/tekton/secrets/base
-  - ../../../manifests/tekton/tasks/base
-  - ../../../manifests/tekton/triggers/base
-  - ../../../manifests/tekton/pipelines/base
-  - ../../../manifests/apps/golang-gitwebhook-service/base
+  #- ../../../manifests/tekton/tasks/base
+  #- ../../../manifests/tekton/triggers/base
+  #- ../../../manifests/tekton/pipelines/base
+  #- ../../../manifests/apps/golang-gitwebhook-service/base
   
 resources:
   - namespace/namespace.yaml
