--- a/environments/overlays/cicd/kustomization.yaml
+++ b/environments/overlays/cicd/kustomization.yaml
@@ -2,6 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 bases:
   - ../../../manifests/tekton/rbac/base
+  - ../../../manifests/tekton/secrets/base
 resources:
   - namespace/namespace.yaml
   - namespace/limit-range.yaml
