--- a/environments/overlays/cicd/kustomization.yaml
+++ b/environments/overlays/cicd/kustomization.yaml
@@ -4,6 +4,9 @@ bases:
   - ../../../manifests/tekton/rbac/base
   - ../../../manifests/tekton/secrets/base
   - ../../../manifests/tekton/triggers/base
+  - ../../../manifests/tekton/tasks/base
+  - ../../../manifests/tekton/pipelines/base
+  - ../../../manifests/apps/golang-gitwebhook-service/base
 resources:
   - namespace/namespace.yaml
   - namespace/limit-range.yaml
