--- a/manifests/apps/golang-gitwebhook-service/base/deploy.yaml
+++ b/manifests/apps/golang-gitwebhook-service/base/deploy.yaml
@@ -8,31 +8,21 @@ metadata:
     app: golang-gitwebhook-interface
     app.kubernetes.io/component: golang-gitwebhook-interface
     app.kubernetes.io/instance: golang-gitwebhook-interface
-    name: golang-gitwebhook-interface
+  name: golang-cicd
+
 spec:
   strategy:
-    type: Rolling
-    rollingParams:
-      updatePeriodSeconds: 1
-      intervalSeconds: 1
-      timeoutSeconds: 600
-      maxUnavailable: 25%
-      maxSurge: 25%
-    resources: {}
-    activeDeadlineSeconds: 21600
-  triggers:
-    - type: ConfigChange
+    type: RollingUpdate
   replicas: 1
   revisionHistoryLimit: 10
-  test: false
+
   selector:
-    name: golang-gitwebhook-interface
+    matchLabels:
+      app.kubernetes.io: golang-gitwebhook-interface
   template:
     metadata:
-      creationTimestamp: null
       labels:
-        name: golang-gitwebhook-interface
-      
+        app.kubernetes.io: golang-gitwebhook-interface
     spec:
       containers:
         - resources:
@@ -56,7 +46,7 @@ spec:
           livenessProbe:
             httpGet:
               path: /isalive
-              port: 9000
+             port: 9000
               scheme: HTTP
             initialDelaySeconds: 55
             timeoutSeconds: 5
@@ -93,14 +83,11 @@ spec:
               protocol: TCP
           imagePullPolicy: Always
           terminationMessagePolicy: File
-          envFrom:
-            - secretRef:
-                name: my-cluster-cluster-ca-cert
           image: >-
             quay.io/luigizuccarelli/golang-gitwebhook-service:1.15.6
       restartPolicy: Always
       terminationGracePeriodSeconds: 30
       dnsPolicy: ClusterFirst
       securityContext: {}
-      schedulerName: default-scheduler
+
 
