--- a/manifests/apps/golang-gitwebhook-service/base/service.yaml
+++ b/manifests/apps/golang-gitwebhook-service/base/service.yaml
@@ -1,16 +1,16 @@
 kind: Service
 apiVersion: v1
 metadata:
-  name: golang-cicd
+  name: golang-gitwebhook-interface
   namespace: golang-cicd
   labels:
-    app: golang-gitwebhook-interface
+    app: golang-cicd
     app.kubernetes.io/component: golang-gitwebhook-interface
     app.kubernetes.io/instance: golang-gitwebhook-interface
     name: golang-gitwebhook-interface
 spec:
   ports:
-    - name: golang-gitwebhook-interface-port
+    - name: golang-gitwebhook-interface
       protocol: TCP
       port: 9000
       targetPort: 9000
