--- a/manifests/apps/golang-gitwebhook-service/base/configmap.yaml
+++ b/manifests/apps/golang-gitwebhook-service/base/configmap.yaml
@@ -5,5 +5,5 @@ metadata:
   namespace: golang-cicd
 data:
   repo: >-
-    eventbus-grpc=http://lmzsoftware.com/lzuccarelli/infra-eventbus-grpc.git
+    golang-eventbus-grpc=http://192.168.1.15/lzuccarelli/infra-eventbus-grpc.git
 
