Added clusterrole tasks

--- a/environments/overlays/cicd/kustomization.yaml
+++ b/environments/overlays/cicd/kustomization.yaml
@@ -12,5 +12,6 @@ resources:
   - namespace/limit-range.yaml
   - namespace/resource-quota.yaml
   - shared/pipeline-pvc.yaml
+  - shared/build-cache-pvc.yaml
 namespace: golang-cicd
 
