--- a/manifests/tekton/secrets/base/git-http-secret.yaml
+++ b/manifests/tekton/secrets/base/git-http-secret.yaml
@@ -3,8 +3,9 @@ kind: Secret
 metadata:
   name: git-basic
   annotations:
-    tekton.dev/git-0: https://lmzsoftware.com/
+    tekton.dev/git-0: https://192.168.1.15/
 type: Opaque
 data:
   username: cm9ib3QtY2ljZAo=
   password: cm9ib3QtY2ljZDAxCg==
+  url: aHR0cDovL3JvYm90LWNpY2Q6cm9ib3QtY2ljZDAxQDE5Mi4xNjguMS4xNS9senVjY2FyZWxsaS8=
