--- a/manifests/tekton/tasks/base/golang-build-dev.yaml
+++ b/manifests/tekton/tasks/base/golang-build-dev.yaml
@@ -23,44 +23,50 @@ spec:
   - name: actor-email
     description: The actors email
     type: string
+  - name: IMAGE_REG_BASE
+    description: The base registry for the image
+    type: string
  
   workspaces:
     - name: output
       
   steps: 
-  - name: info
-    image: bash
-    command: ["bash", "-c"]
-    args: ["echo -e 'Pipeline run project : $(params.repo-name)\ncommit hash :  $(params.repo-hash)\nuser info : $(params.actor-name) : $(params.actor-email)'"]
- 
   - name: run-build
     image: quay.io/luigizuccarelli/golang-base:1.15.6
     workingDir: /workspace/output/$(params.repo-name)
     resources:
         limits:
           cpu: 100m
-          memory: 3500Mi
+          memory: 1500Mi
         requests:
           cpu: 100m
-          memory: 3500Mi
+          memory: 1500Mi
     command: ["make"]
     args: ["build"]
     securityContext:
       runAsUser: 0
+    volumeMounts:
+    - name: build-cache
+      mountPath: /home/1001/pkg
+
     
   - name: build-and-push
     workingDir: /workspace/$(params.repo-name)
     image:  gcr.io/kaniko-project/executor@sha256:b9eec410fa32cd77cdb7685c70f86a96debb8b087e77e63d7fe37eaadb178709
     command: ["/kaniko/executor"]
-    args: ["--dockerfile=/workspace/output/$(params.repo-name)/Dockerfile","--context=/workspace/output/$(params.repo-name)/","--destination=quay.io/14west/$(params.repo-name):$(params.repo-hash)"]
+    args: ["--dockerfile=/workspace/output/$(params.repo-name)/Dockerfile","--context=/workspace/output/$(params.repo-name)/","--destination=$(params.IMAGE_REG_BASE)$(params.repo-name):$(params.repo-hash)"]
     securityContext:
       runAsUser: 0
     volumeMounts:
     - name: docker-config
-      mountPath: /kaniko/.docker
+      mountPath: /kaniko/.docker/
+
   volumes:
   - name: docker-config
     configMap:
       name: docker-config
-  
+  - name: build-cache
+    persistentVolumeClaim:
+      claimName: build-cache-pvc-dev
+
 
